<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@drawable/alcohols"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:text="@string/about"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:layout_below="@+id/thankview"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button4"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/button4"
        android:onClick="goBack"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/thanku"
        android:id="@+id/thankview"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="36dp"
        android:textAlignment="center" />
</RelativeLayout>